Prevent sidebar content from being cut off
Fixes DD 78973 207

--- a/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_general.scss
+++ b/app/design/frontend/Travers/default/SomethingDigital_ReactPLP/styles/components/_general.scss
@@ -589,3 +589,7 @@ $sidebar__max-width: 240px;
         padding-left: 70px;
     }
 }
+
+.catalog-category-view #launcher {
+    display: none; // hide chat button on PLPs
+}
